# website

./: .gitignore  Cargo.toml  Gemfile  README.md  _config.yml  binserve.json  build  deploy  rustfmt.toml  shell.nix  static-web-server.toml  watch  watch-posts  ws
.cargo/: config.toml
.claude/: settings.json
_includes/: head.html  nav.html
_layouts/: default.html  home.html
_sass/: main.sass  overrides.sass
drafts/: 2025-11-19-rust-lang.md
layouts/: home.html
pages/: 404.md  about.md  devlog.md
posts/: 2018-04-08-language-and-framework.md  2018-04-15-javascript-physics-engines.md  2018-05-06-more-javascript-physics.md  2018-07-08-code-style-fp.md  2019-06-30-new-development-machine.md  2019-10-28-aws-static-website.md  2019-11-01-renew-https-tls-certificates.md  2019-11-06-project-reboot-all-in-on-fsharp.md  2019-11-08-opengl-library.md  2019-11-12-automated-testing-fsharp-expecto.md  2019-11-20-library-implemented-in-fsharp.md  2020-01-16-text-rendering-opengl-fsharp.md  2021-02-15-recap-of-2020.md  2021-02-26-fsharp-language-server-neovim.md  2025-11-19-rust-lang.md  2025-12-23-rust-a-test-driven-guide.rs  2025-12-24-process-over-magic-beyond-vibe-coding-notes.md  draft-learning-to-type-again.md  draft-process-over-magic-beyond-vibe-coding-notes.md  draft-rust-a-test-driven-guide.rs  draft-rust-lang.md
scripts/: rust-script-test
src/: cloudflare.rs  index.rs  io.rs  lib.rs  main.rs  markdown.rs  path.rs  post.rs  rs2md.rs  rust_to_markdown.rs  string.rs
templates/: card.html  footer.html  header.html  highlightjs.html  home.html  nav.html  (+1 more)
(+15 files in other folders)
